--- a/eRede/eRede/eRede.csproj
+++ b/eRede/eRede/eRede.csproj
@@ -1,25 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
+        <TargetFramework>netstandard2.1</TargetFramework>
+        <Version>1.1.0</Version>
+        <Authors>Codout, Clovis Coli Jr</Authors>
+        <Description>Biblioteca de integração com a adquirente Rede</Description>
+        <PackageId>Codout.eRede</PackageId>
+        <PackageProjectUrl>https://github.com/Codout/Codout.Framework</PackageProjectUrl>
+        <PackageIcon>logo-nuget.png</PackageIcon>
+        <PackageIconUrl />
+        <RepositoryUrl>https://github.com/Codout/Codout.Framework</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>Codout;Framework;eRede</PackageTags>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Json.NET.Web" Version="1.0.49" />
-      <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
-      <PackageReference Include="RestSharp" Version="106.6.9" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="RestSharp" Version="106.10.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Remove="Properties\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <EmbeddedResource Remove="Properties\**" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Properties\**" />
+      <None Include="..\..\..\logo-nuget.png">
+        <Pack>True</Pack>
+        <PackagePath></PackagePath>
+      </None>
     </ItemGroup>
 
 </Project>
